# rxfetch

./: Cargo.toml
benches/: gpu.rs  pci.rs
src/: arrayvec.rs  display.rs  lib.rs  main.rs  parse.rs
src/components/: cpu.rs  gpu.rs  mod.rs  name.rs  pci.rs
src/pci/: id_parser.rs  linux_procfs.rs  linux_sysfs.rs  mod.rs
