[package]
name = "rxfetch"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug ="full"

[profile.release]
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# atoi = "2.0.0"
env_logger = "0.10.1"
log = { version = "0.4.20", features = ["release_max_level_error", "std"] }
pci-ids = {git = "https://github.com/Sxmourai/auto-pci-ids.rs", version = "*"}
# pciutils-sys = "0.1.3"
# sysinfo = { version = "0.29.2", default-features = false }
winnow = { version = "0.5.34", features = ["simd"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "gpu"
harness = false

[[bench]]
name = "pci"
harness = false
