[package]
name = "rxfetch"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug ="full"

[profile.release]
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = { version = "0.4.20", features = ["release_max_level_error", "std"] }
pci-ids = {git = "https://github.com/Sxmourai/auto-pci-ids.rs", version = "*"}
winnow = { version = "0.5.34", features = ["simd"] }

[dev-dependencies]
criterion = "0.5.1"
#
# [[bench]]
# name = "gpu"
# harness = false
#
# [[bench]]
# name = "pci"
# harness = false
